# web-search

./: .env.example  .gitignore  MCP_SERVER_OPTIMIZATION_STRATEGY.md  PERFORMANCE_OPTIMIZATION_STRATEGY.md  README.md  README_updated.md  SMART_DEDUPLICATION.md  analyze_metrics.py  improved_schemas.py  mcp-server-management.md  package.json  pyproject.toml  requirements.txt  schemas.py  server.py  start.sh  test_daemon.py  test_google_integration.py  test_multi_client.py  test_real_google_api.py  test_smart_dedup.py  test_sse.py
.github/workflows/: pylint.yml
benchmarks/: .gitignore  extractor_bench.py
debug/: debug_parsing.py  diagnose_engines.py  test_brave_api.py  test_engines.py  test_fallback.py
docs/: PERFORMANCE_OPTIMIZATION_STRATEGY.md  SEARCH_RANKING_OPTIMIZATION_STRATEGY.md  architecture-decisions.md
scripts/: start-daemon.sh  status.sh  stop-daemon.sh
src/websearch/: __init__.py  config.py  connection_manager.py  daemon.py  google_quota.json  schemas.py  server.py
src/websearch/core/: __init__.py  async_fallback_search.py  async_search.py  common.py  content.py  fallback_search.py  ranking.py  search.py
src/websearch/engines/: __init__.py  async_search.py  base.py  brave_api.py  google_api.py  parsers.py  search.py
src/websearch/utils/: advanced_cache.py  brave_quota.py  cache.py  connection_pool.py  content.py  deduplication.py  http.py  paths.py  quota.py  relevance.py  rotation.py  smart_deduplication.py  tracking.py  unified_quota.py  url_normalize.py  url_validation.py
tests/: test_advanced_cache.py  test_async_fallback.py  test_async_integration.py  test_brave_api.py  test_connection_manager.py  test_connection_pool.py  test_content_extraction.py  test_daemon.py  test_google_api.py  test_http_limits.py  test_integration.py  test_parsers.py  test_performance_benchmark.py  test_ranking.py  test_relevance.py  test_rotation.py  test_schemas.py  test_server.py  test_smart_deduplication.py  test_tracking.py  test_unified_quota.py  test_url_normalize.py  test_url_validation.py
