[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "websearch-mcp"
version = "2.1.0"
description = "Multi-engine web search MCP server with HTTP daemon support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.12.0",
    "requests",
    "beautifulsoup4",
    "aiohttp",
]

[tool.setuptools.packages.find]
where = ["src"]
