[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "websearch"
version = "2.1.0"
description = "Advanced web search and content extraction MCP server with multi-engine support"
authors = ["Vishal Gupta <vishal@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "websearch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = "^2.12.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
aiohttp = "^3.9.0"
lxml = "^4.9.0"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
pytest-asyncio = "^0.21.0"
pytest-benchmark = "^4.0.0"

[tool.poetry.scripts]
websearch-server = "websearch.server:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
