[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "websearch"
version = "2.4.0"
description = "Advanced web search and content extraction MCP server with multi-engine support"
authors = ["Vishal Gupta <vishal@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "websearch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = "^3.3.1"
requests = "^2.34.2"
beautifulsoup4 = "^4.14.3"
aiohttp = "^3.13.5"
lxml = "^6.1.0"
python-dotenv = "^1.2.2"
google-api-python-client = "^2.196.0"
platformdirs = "^4.9.6"
trafilatura = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.5.0"
ruff = "^0.15.0"
mypy = "^1.18.0"
pytest-asyncio = "^1.3.0"
pytest-benchmark = "^5.2.0"

[tool.poetry.scripts]
websearch-server = "websearch.server:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit live network (skip with -m 'not integration')",
]
